# template_cmake_gtk_adwaita

./: .gitignore  CMakeLists.txt  README.md  config.h.in  org.ebh.Example.xml  org.ebh.Example.yml  resources.gresource.xml  resources.gresource.xml.in
include/: GreaterWindow.h  MainWindow.h  NotificationManager.h
service-files/: application.desktop.in  application.service.in
src/: GreaterWindow.c  GreaterWindow.cpp  MainWindow.c  MainWindow.cpp  NotificationManager.cpp  main.cpp
ui/: greater.blp  window.blp
